# UtfString

./: .gitignore  Makefile.am  Makefile.in  README.md  builddecisions.txt  configure.ac  license.txt
doc/: DocTopics.txt  UtfString_Doxyfile  doxygen_log.txt
doc/html/: _platform_implementations_8h.html  _unicode_char_8h.html  _unicode_char_reference_8h.html  _unicode_string_8h.html  _utf16_char_8h.html  _utf16_char_reference_8h.html  _utf16_string_8h.html  _utf8_char_8h.html  _utf8_char_reference_8h.html  _utf_common_8h.html  _utf_string_8h.html  _utf_string_converter_8h.html  annotated.html  class_utf_string_1_1_global_functions.html  class_utf_string_1_1_unicode_char-members.html  class_utf_string_1_1_unicode_char.html  class_utf_string_1_1_unicode_char_reference-members.html  class_utf_string_1_1_unicode_char_reference.html  class_utf_string_1_1_unicode_string-members.html  class_utf_string_1_1_unicode_string.html  class_utf_string_1_1_unicode_string_1_1const__iterator-members.html  class_utf_string_1_1_unicode_string_1_1const__iterator.html  class_utf_string_1_1_unicode_string_1_1const__reverse__iterator-members.html  class_utf_string_1_1_unicode_string_1_1const__reverse__iterator.html  class_utf_string_1_1_unicode_string_1_1iterator-members.html  class_utf_string_1_1_unicode_string_1_1iterator.html  class_utf_string_1_1_unicode_string_1_1reverse__iterator-members.html  class_utf_string_1_1_unicode_string_1_1reverse__iterator.html  class_utf_string_1_1_utf16_char-members.html  class_utf_string_1_1_utf16_char.html  class_utf_string_1_1_utf16_char_reference-members.html  class_utf_string_1_1_utf16_char_reference.html  class_utf_string_1_1_utf16_string_1_1const__iterator-members.html  class_utf_string_1_1_utf16_string_1_1const__iterator.html  class_utf_string_1_1_utf16_string_1_1const__reverse__iterator-members.html  class_utf_string_1_1_utf16_string_1_1const__reverse__iterator.html  class_utf_string_1_1_utf16_string_1_1iterator-members.html  class_utf_string_1_1_utf16_string_1_1iterator.html  class_utf_string_1_1_utf16_string_1_1reverse__iterator-members.html  class_utf_string_1_1_utf16_string_1_1reverse__iterator.html  (+80 more)
doc/input/: BuildingUsingUtfString.h  DesignImplOverview.h  DevelopersNotes.h  InitializingAssigningUtfString.h  MainPage.h  MainTutorialPage.h  ManipulatingStrings.h  UnicodeOverview.h  UsingIterators.h  UsingUnicodeString.h  UsingUtfChars.h  UsingUtfStringGuidelines.h
doc/md/: buildingusingutfstring.md  designimploverview.md  developersnotes.md  usingutfstringguidelines.md
doc/md/tutorial/: initializingassigningutfstring.md  manipulatingstrings.md  tutorial.md  unicodeoverview.md  unicodestring.md  usingiterators.md  usingutfchars.md
example/SimpleUtfStringApp/: SimpleUtfStringApp.cpp
include/: Makefile.am  Makefile.in
include/utfstring/: PlatformImplementations.h  UnicodeChar.h  UnicodeCharReference.h  UnicodeString.h  Utf16Char.h  Utf16CharReference.h  Utf16String.h  Utf8Char.h  Utf8CharReference.h  Utf8String.h  UtfCommon.h  UtfString.h  UtfStringConverter.h
src/: Makefile.am  Makefile.in  UInt16CharTraits.cpp  UnicodeChar.cpp  UnicodeCharReference.cpp  UnicodeString.cpp  Utf16Char.cpp  Utf16CharReference.cpp  Utf16String.cpp  Utf8Char.cpp  Utf8CharReference.cpp  Utf8String.cpp  UtfStringConverter.cpp
test/: Makefile.am  Makefile.in  StringConverterTest.cpp  StringConverterTest.h  TestRunner.cpp  UnicodeCharReferenceTest.cpp  UnicodeCharReferenceTest.h  UnicodeCharTest.cpp  UnicodeCharTest.h  UnicodeStringTest.cpp  UnicodeStringTest.h  Utf16CharReferenceTest.cpp  Utf16CharReferenceTest.h  Utf16CharTest.cpp  Utf16CharTest.h  Utf16StringTest.cpp  Utf16StringTest.h  Utf8CharReferenceTest.cpp  Utf8CharReferenceTest.h  Utf8CharTest.cpp  Utf8CharTest.h  Utf8StringTest.cpp  Utf8StringTest.h  UtfStringUnitTests.h
