# Tell automake that the include files should be installed in a utfstring subdirectory
# under the include directory
libutfstringincludedir = $(includedir)/utfstring

libutfstringinclude_HEADERS = utfstring/Utf16Char.h \
	utfstring/Utf16CharReference.h \
	utfstring/Utf16String.h \
	utfstring/Utf8Char.h \
	utfstring/Utf8CharReference.h \
	utfstring/Utf8String.h \
	utfstring/UtfCommon.h \
	utfstring/UtfString.h \
	utfstring/UtfStringConverter.h
	